--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <title>My Mídias Socias</title>
 </head>
 <body>
-    
+    <main>
+        <section id="telefone">
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+        </section>
+
+        <section id="midias"></section>
+    </main>
 </body>
 </html>
