Fiz os botões das midias

--- a/index.html
+++ b/index.html
@@ -14,7 +14,27 @@
             <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
         </section>
 
-        <section id="midias"></section>
+        <section id="midias">
+            <a href="#" target="tela"> <br>
+                <img src="assets/imagens/logo-home.jpg" alt="Home">
+            </a>
+
+            <a href="#" target="tela"> <br>
+                <img src="assets/imagens/logo-github.jpg" alt="Github">
+            </a>
+
+            <a href="#" target="tela"> <br>
+                <img src="assets/imagens/logo-instagram.jpg" alt="Instagram">
+            </a>
+
+            <a href="#" target="tela"> <br>
+                <img src="assets/imagens/logo-twitter.jpg" alt="Twitter">
+            </a>
+
+            <a href="#" target="tela"> <br>
+                <img src="assets/imagens/linkedin.png" alt="Linkedin">
+            </a>
+        </section>
     </main>
 </body>
 </html>
