--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         </section>
 
         <section id="midias">
-            <a href="#" target="tela"> <br>
+            <!-- Links das redes socias -->
+            <a href="home.html" target="tela"> <br>
                 <img src="assets/imagens/logo-home.jpg" alt="Home">
             </a>
 
-            <a href="#" target="tela"> <br>
+            <a href="github.html" target="tela"> <br>
                 <img src="assets/imagens/logo-github.jpg" alt="Github">
             </a>
 
