Fiz alguns ajustes

--- a/github.html
+++ b/github.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/estilo/midias.css">
 </head>
 <body>
-    <img src="assets/imagens/tela-github.jpg" alt="Tela Github">
+    <img src="assets/imagens/tela-github.png" alt="Tela Github">
     <a href="https://github.com/AlisonPereira749" target="_blank">ACESSE</a>
 </body>
 </html>
