--- a/insta.html
+++ b/insta.html
@@ -8,7 +8,7 @@
     <title>Instagram</title>
 </head>
 <body>
-    <img src="alt="Perfil do Instagram">
-    <a href="https://instagram.com/alison__s2/" target="_black">ACESSE</a>
+    <img src="assets/imagens/tela-insta.jpg" alt="">
+    <a href="https://Instagram.com/alison__s2/" target="_black">ACESSE</a>
 </body>
 </html>
