--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <img src="assets/imagens/logo-github.jpg" alt="Github">
             </a>
 
-            <a href="#" target="tela"> <br>
+            <a href="insta.html" target="tela"> <br>
                 <img src="assets/imagens/logo-instagram.jpg" alt="Instagram">
             </a>
 
