--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                 <img src="assets/imagens/logo-instagram.jpg" alt="Instagram">
             </a>
 
-            <a href="#" target="tela"> <br>
+            <a href="twitter.html" target="tela"> <br>
                 <img src="assets/imagens/logo-twitter.jpg" alt="Twitter">
             </a>
 
-            <a href="#" target="tela"> <br>
+            <a href="linkedin.html" target="tela"> <br>
                 <img src="assets/imagens/linkedin.png" alt="Linkedin">
             </a>
         </section>
