--- a/twitter.html
+++ b/twitter.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/estilo/midias.css">
-    <title>Linkedin</title>
+    <title>Twitter</title>
 </head>
 <body>
-    <img src="assets/imagens/tela-linkedin.jpg" alt="Perfil do LinkedIn">
-    
-    <a href="https://www.linkedin.com/in/antonio-alison/" target="_blank">ACESSE</a>
+    <img src="assets/imagens/tela-twitter.jpg" alt="Perfil do Twitter">
+    <a href="https://twitter.com/AlisonS48868883" target="_blank">ACESSE</a>
 </body>
 </html>
